feat(oss): 重构用户头像上传功能
- 修改头像上传逻辑，使用 UploadFileDTO替代 FileStorageDTO
-重新定义头像存储路径和命名规则
- 更新数据库操作，使用 AvatarEntity 替代 AvatarDTO- 优化代码结构，提高可维护性和扩展性